--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-This is sunbeam
+<html>
+  <head>
+    <title>Sunbeam</title>
+  </head>
+  <body>
+    <h1>ditiss</h1>
+    <h2>Rahul</h2>
+</html>
