--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <html>
-  <head>
-    <title>Sunbeam</title>
-  </head>
-  <body>
-    <h1>ditiss</h1>
-    <h2>Rahul</h2>
-     <h3>Shelke</h3>
-  </body>
+	<head>
+		<title>Welcome to Sunbeam | Pune</title>
+	</head>
+	
+	<body>
+		<h1 align='center'>Welcome to Sunbeam </h1>
+		<hr><hr>
+		
+		<table border='1'>
+		<table>
+			<tr>
+				<th>No</th>
+				<th>Name</th>
+				<td>Group</td>
+			</tr>
+			
+			<tr>
+				<td>l</td>
+				<td>Rahul</td>
+			</tr>
+			
+			<tr>
+				<td>2</td>
+				<td>Om</td>
+			</tr>
+			
+			<tr>
+				<td colspan='3'>&nbsp;</td>
+			</tr>
+			
+		</table>
+
+	</body>
 </html>
+
