--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <html>
 	<head>
-		<title>Welcome to Sunbeam | Pune</title>
+		<title>Shelke's Group of Companies</title>
 	</head>
 	
 	<body>
-		<h1 align='center'>Welcome to Sunbeam </h1>
+		<h1 align='center'>Welcome to Shelke's Group of Companies </h1>
 		<hr><hr>
 		
 		<table border='1'>
 		<table>
 			<tr>
-				<th>No</th>
-				<th>Name</th>
-				<td>Group</td>
+				<th>No.>
+				<th>Members</th>
 			</tr>
 			
 			<tr>
 				<td>l</td>
-				<td>Rahul</td>
+				<td>Rushikesh Shelke</td>
 			</tr>
 			
 			<tr>
 				<td>2</td>
-				<td>Om</td>
+				<td>Rahul Shelke</td>
 			</tr>
-			
+			<tr>
+                                <td>3</td>
+                                <td>Om Shelke</td>
+                        </tr>
 			<tr>
 				<td colspan='3'>&nbsp;</td>
 			</tr>
